[package]
name = "east_forest"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }

actix-web = "4.0"        # Web框架
actix-cors = "0.6"       # CORS支持
actix-rt = "2.0"         # Runtime

jsonwebtoken = "8.0"     # JWT支持
bcrypt = "0.13"          # 密码加密
argon2 = "0.4"           # 替代加密方案

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

config = "0.13"          # 配置管理
dotenvy = "0.15"         # 环境变量


reqwest = { version = "0.11", features = ["json"] } # HTTP客户端
serde_json = "1.0"       # JSON处理
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }

log = "0.4"
env_logger = "0.10"